# flake8-pathlib

./: .flake8  .gitignore  .gitlab-ci.yml  README.md  pyproject.toml
flake8_pathlib/: checker.py
flake8_use_pathlib/: checker.py
tests/: test_P100_P122.py  test_P123.py  test_P124.py  test_noqa.py
